# docs/swagger.json
@@ -876,6 +876,26 @@
                 }
             }
         },
+        "/health": {
+            "get": {
+                "description": "Health Check",
+                "tags": [
+                    "Health"
+                ],
+                "summary": "HealthCheck",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "server error",
+                        "schema": {
+                            "$ref": "#/definitions/clientError.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/moniests": {
             "post": {
                 "security": [
